// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot of SliderContent (examples) 1`] = `
<div>
  <ul
    className="menu examples"
    id="examples-menu"
  >
    <li
      className="examplesitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure/MachineLearningSamples-PredictiveMaintenance"
        data-theme="medium"
      />
    </li>
    <li
      className="examplesitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure/MachineLearningSamples-SentimentAnalysis"
        data-theme="medium"
      />
    </li>
    <li
      className="examplesitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure/MachineLearningSamples-ChurnPrediction"
        data-theme="medium"
      />
    </li>
    <li
      className="examplesitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure/MachineLearningSamples-BiomedicalEntityExtraction"
        data-theme="medium"
      />
    </li>
    <li
      className="examplesitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure/MachineLearningSamples-QnAMatching"
        data-theme="medium"
      />
    </li>
    <li
      className="examplesitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure/MachineLearningSamples-AerialImageClassification"
        data-theme="medium"
      />
    </li>
  </ul>
  <div
    class="paddles"
  >
    <button
      class="left-paddle paddle hidden"
      id="examples-left"
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      class="right-paddle paddle"
      id="examples-right"
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
</div>
`;

exports[`renders a snapshot of SliderContent (models) 1`] = `
<div>
  <ul
    className="menu models"
    id="models-menu"
  >
    <li
      className="modelsitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure-Samples/AI-Gallery-InceptionV3"
        data-theme="medium"
      />
    </li>
    <li
      className="modelsitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="Azure-Samples/AI-Gallery-TinyYolo"
        data-theme="medium"
      />
    </li>
    <li
      className="modelsitem item"
    >
      <div
        className={
          Array [
            "github-card",
          ]
        }
        data-github="onnx/models"
        data-theme="medium"
      />
    </li>
  </ul>
  <div
    class="paddles"
  >
    <button
      class="left-paddle paddle hidden"
      id="models-left"
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      class="right-paddle paddle"
      id="models-right"
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
</div>
`;
